--- a/DOM_events/index.html
+++ b/DOM_events/index.html
@@ -13,6 +13,8 @@
     <button onclick="makeRed()">Make red</button>
     <br />
     <button id="blue-btn">Make blue</button>
+    <br />
+    <button id="green-btn">Make green</button>
     <script src="../js/events.js"></script>
     <script>
       function makeRed() {
