--- a/DOM_events/event.html
+++ b/DOM_events/event.html
@@ -8,6 +8,13 @@
   <body>
     <h1 id="title">DOM Events</h1>
     <button id="update-btn">Update</button>
+    <br />
+
+    <!-- input -->
+
+    <p id="name-text">No name</p>
+    <input id="input" type="text" placeholder="your name" />
+    <button id="btn">Update</button>
     <script src="../js/handeler.js"></script>
   </body>
 </html>
